infra/temp_k8s_yaml/director.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dys-svc-director
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dys-svc-director
  template:
    metadata:
      labels:
        app: dys-svc-director
    spec:
      containers:
      - name: dys-svc-director
        image: dystopiadev.azurecr.io/dys-svc-director:latest
        ports:
        - containerPort: 6081
          name: http-port
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 75m
            memory: 200Mi
        livenessProbe:
          httpGet:
            port: http-port
            path: /health
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: http-port
            path: /health
          failureThreshold: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: dys-svc-director
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 6081
  selector:
    app: dys-svc-director
